top components styles and creations done

--- a/bootstrap-starter-data/_components.yml
+++ b/bootstrap-starter-data/_components.yml
@@ -100,7 +100,11 @@ _components:
   vulture-section:
     instances:
       claydemo:
-        componentVariation: header
+        componentVariation: vultureSection
+  magazine-section:
+    instances:
+      claydemo:
+        componentVariation: magazineSection
   footer:
     instances:
       claydemo:
