--- a/bootstrap-starter-data/_layouts.yml
+++ b/bootstrap-starter-data/_layouts.yml
@@ -12,6 +12,8 @@ _layouts:
           -
             _ref: /_components/header/instances/claydemo
           -
+            _ref: /_components/magazine-section/instances/claydemo
+          -
             _ref: /_components/vulture-section/instances/claydemo
         main: main
         bottom:
@@ -32,6 +34,8 @@ _layouts:
         top:
           -
             _ref: /_components/header/instances/claydemo
+          -
+            _ref: /_components/magazine-section/instances/claydemo
           -
             _ref: /_components/vulture-section/instances/claydemo
         main: main
