all layout components added, footers included

--- a/bootstrap-starter-data/_components.yml
+++ b/bootstrap-starter-data/_components.yml
@@ -105,6 +105,10 @@ _components:
     instances:
       claydemo:
         componentVariation: magazineSection
+  social-media:
+    instances:
+      claydemo:
+        componentVariaton: socialMedia
   footer:
     instances:
       claydemo:
