--- a/bootstrap-starter-data/_layouts.yml
+++ b/bootstrap-starter-data/_layouts.yml
@@ -9,8 +9,8 @@ _layouts:
           -
             _ref: /_components/meta-icons/instances/claydemo
         top:
-          -
-            _ref: /_components/header/instances/claydemo
+          # -
+          #   _ref: /_components/header/instances/claydemo
           -
             _ref: /_components/magazine-section/instances/claydemo
           -
@@ -18,7 +18,11 @@ _layouts:
         main: main
         bottom:
           -
-            _ref: /_components/footer/instances/claydemo
+            _ref: /_components/vulture-section/instances/claydemo
+          -
+            _ref: /_components/social-media/instances/claydemo
+          # -
+          #   _ref: /_components/footer/instances/claydemo
         kilnInternals:
           -
             _ref: /_components/clay-kiln/instances/general
@@ -32,8 +36,8 @@ _layouts:
           -
             _ref: /_components/meta-icons/instances/claydemo
         top:
-          -
-            _ref: /_components/header/instances/claydemo
+          # -
+          #   _ref: /_components/header/instances/claydemo
           -
             _ref: /_components/magazine-section/instances/claydemo
           -
@@ -41,7 +45,11 @@ _layouts:
         main: main
         bottom:
           -
-            _ref: /_components/footer/instances/claydemo
+            _ref: /_components/vulture-section/instances/claydemo
+          -
+            _ref: /_components/social-media/instances/claydemo
+          # -
+          #   _ref: /_components/footer/instances/claydemo
         kilnInternals:
           -
             _ref: /_components/clay-kiln/instances/general
