advertisement component and css added

--- a/bootstrap-starter-data/_components.yml
+++ b/bootstrap-starter-data/_components.yml
@@ -102,6 +102,12 @@ _components:
       claydemo:
         componentVariation: mostViewedStories
         stories: []
+  advertisement:
+    instances:
+      claydemo:
+        componentVariation: advertisement
+        imageUrl: ''
+        imageSrc: ''
   vulture-section:
     instances:
       claydemo:
