--- a/bootstrap-starter-data/_layouts.yml
+++ b/bootstrap-starter-data/_layouts.yml
@@ -16,6 +16,8 @@ _layouts:
         main: main
         side:
           -
+            _ref: /_components/advertisement/instances/claydemo
+          -
             _ref: /_components/most-viewed-stories/instances/claydemo
         bottom:
           -
@@ -41,6 +43,8 @@ _layouts:
             _ref: /_components/vulture-section/instances/claydemo
         main: main
         side:
+          -
+            _ref: /_components/advertisement/instances/claydemo
           -
             _ref: /_components/most-viewed-stories/instances/claydemo
         bottom:
