header and footer instances and styles applied for vulture-section comoponent

--- a/bootstrap-starter-data/_components.yml
+++ b/bootstrap-starter-data/_components.yml
@@ -118,8 +118,19 @@ _components:
         stories: []
   vulture-section:
     instances:
-      claydemo:
+      header:
         componentVariation: vultureSection
+        theCut: ''
+        style: ''
+        self: ''
+        culture: ''
+        power: ''
+      footer:
+        theCut: ''
+        style: ''
+        self: ''
+        culture: ''
+        power: ''
   magazine-section:
     instances:
       claydemo:
