--- a/app/components/vulture-section/bootstrap.yml
+++ b/app/components/vulture-section/bootstrap.yml
@@ -1,3 +1,8 @@
 _components:
   header:
-    componentVariation: vultureSection
+    componentVariation: vulture-section
+    theCut: ''
+    style: ''
+    self: ''
+    culture: ''
+    power: ''
