subscribe working with tags

--- a/app/components/article/bootstrap.yml
+++ b/app/components/article/bootstrap.yml
@@ -3,6 +3,7 @@ _components:
     authors: []
     byline: []
     dateUpdated: false
+    articleTypeHeader: []
     content: []
     tags:
       _ref: /_components/tags
